# Passion

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-release.yml
src/: App.test.tsx  App.tsx  main.tsx  styles.css  styles.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/calendars/: cn-workdays-2026.json
src-tauri/src/: ai_settings.rs  app_log.rs  app_state.rs  commands.rs  db.rs  downloader.rs  error.rs  http_tester.rs  lib.rs  main.rs  models.rs  network_diagnostics.rs  notifications.rs  reminders.rs  scheduler.rs  script_runner.rs  script_task_scheduler.rs  script_tasks.rs  settings.rs  ssh_tunnels.rs  system_monitor.rs  translator.rs  tray.rs  workday_calendar.rs
src/components/: AddReminderDialog.test.tsx  AddReminderDialog.tsx  DownloadPanel.test.tsx  DownloadPanel.tsx  NetworkDiagnosticsPanel.test.tsx  NetworkDiagnosticsPanel.tsx  ReminderList.test.tsx  ReminderList.tsx  ReminderPopup.test.tsx  ReminderPopup.tsx  ReminderWindow.test.tsx  ReminderWindow.tsx  ScriptTasksPanel.test.tsx  ScriptTasksPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SshTunnelsPanel.test.tsx  SshTunnelsPanel.tsx  SystemMonitorPanel.test.tsx  SystemMonitorPanel.tsx  TranslationPanel.test.tsx  TranslationPanel.tsx  UtilitiesPanel.test.tsx  UtilitiesPanel.tsx  WindowControls.test.tsx  WindowControls.tsx  WorkbenchHome.test.tsx  WorkbenchHome.tsx
src/lib/: api.ts  contextMenu.test.ts  contextMenu.ts  events.ts
(+35 files in other folders)
