[package]
name = "passion"
version = "1.0.0"
description = "A personal desktop reminder assistant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "process", "rt", "time", "sync"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
reqwest = { version = "0.12.24", features = ["json"] }
sysinfo = "0.37.2"
encoding_rs = "0.8"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3.27.0"
